#+title: Embark changelog

* Version 1.1 (2024-04-18)
- The =embark-consult= package contains a new exporter for
  =consult-location= targets (produced by several =consult= commands such
  as =consult-line=), which exports to a grep mode buffer. Users wishing
  to use the new grep mode exporter can use the following
  configuration:
  #+begin_src emacs-lisp
    (setf (alist-get 'consult-location embark-exporters-alist)
          #'embark-consult-export-location-grep)
  #+end_src
  The main reason for adding the new exporter is that users of the
  =wgrep= package will be able to make use of a feature that =wgrep= has
  and the built-in =occur-edit-mode= lacks: when editing search results
  you can add new lines to a result location. There are also some
  disadvantages of grep mode compared to occur mode (which is why the
  previously existing occur mode exporter continues to be the
  default): (1) =wgrep= is a third party package while =occur-edit-mode=
  is built-in; (2) occur mode buffers can list lines in any kind of
  buffer, but grep mode and =wgrep= are meant for lines of files
  exclusively.
* Version 1.0 (2023-12-08)
- You can now use around action hooks with multitarget actions (that
  you couldn't previously was an oversight).
- Users of the =embark-consult= package can now use consult async search
  commands such as =consult-grep= as multitarget actions (through
  =embark-act-all=) to search a list of files. For example, you can use
  =consult-find= to search among file /names/ and once you have the
  relevant files in the minibuffer, you can use =embark-act-all= to
  search for some text in those files. When acting on buffers consult
  async search commands will search the associated file if there is
  one, or else the =default-directory= of the buffer.
- =embark-bindings= and similar commands now show definition of keyboard
  macros.
- =embark-org= now recognizes Org links in non-org buffers.